# Python-External-Data-Packaging-Example

./: LICENSE  README.md  pyproject.toml
awesome_auxiliary_data/: awesome_binary.xls
awesome_auxiliary_scripts/: decrease_world_suck.py  generate_awesomeness.py
src/awesome_package/: awesome_module.py
